created a test/conf/test-jvm.options to allow overriding jvm args via file rather than ant

--- a/build.xml
+++ b/build.xml
@@ -158,6 +158,23 @@
       <available file="${build.src.java}" type="dir" />
     </condition>
 
+    <target name="importTestJvmOptions">
+      <loadfile property="test.jvm.args" srcFile="${test.conf}/test-jvm.options">
+        <filterchain>
+          <striplinecomments>
+            <comment value="#"/>
+            <comment value="//"/>
+          </striplinecomments>
+          <prefixlines prefix=" " />
+          <striplinebreaks />
+          <trim />
+        </filterchain>
+      </loadfile>
+      <!-- for cases where the file has no options, define default to be empty -->
+      <property name="test.jvm.args" value="" />
+      <echo>Test JVM args: ${test.jvm.args}</echo>
+    </target>
+
     <!-- Check if all tests are being run or just one. If it's all tests don't spam the console with test output.
          If it's an individual test print the output from the test under the assumption someone is debugging the test
          and wants to know what is going on without having to context switch to the log file that is generated.
@@ -1380,7 +1397,7 @@
       </jar>
   </target>
 
-  <target name="build-test" depends="_main-jar,stress-build,fqltool-build,resolver-dist-lib,simulator-jars,checkstyle-test" unless="no-build-test"
+  <target name="build-test" depends="_main-jar,stress-build,fqltool-build,resolver-dist-lib,simulator-jars,checkstyle-test,importTestJvmOptions" unless="no-build-test"
           description="Compile test classes">
     <antcall target="_build-test"/>
   </target>
@@ -1498,12 +1515,11 @@
         <jvmarg value="-Djava.security.egd=file:/dev/urandom" />
         <jvmarg value="-Dcassandra.testtag=@{testtag}"/>
         <jvmarg value="-Dcassandra.keepBriefBrief=${cassandra.keepBriefBrief}" />
-        <jvmarg value="-Dcassandra.strict.runtime.checks=true" />
-        <jvmarg value="-Dcassandra.track_warnings.coordinator.defensive_checks_enabled=true" /> <!-- enable defensive checks -->
         <jvmarg line="${java11-jvmargs}"/>
         <!-- disable shrinks in quicktheories CASSANDRA-15554 -->
         <jvmarg value="-DQT_SHRINKS=0"/>
         <jvmarg line="${test-jvmargs}" />
+        <jvmarg line="${test.jvm.args}" />
         <optjvmargs/>
         <!-- Uncomment to debug unittest, attach debugger to port 1416 -->
         <!--
